# StudyAppApi

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  account.drawio  class.drawio  mkdocs.yml  pyproject.toml  test.py  zakkuri.drawio
.github/workflows/: README.md  merge_ci.yaml
alembic/: env.py
alembic/versions/: e8d509bf2042_initial_tables.py
docs/: index.md
docs/design/: overview.md
docs/design/function/auth/: disable_token.md  generate_token.md
docs/design/function/organization/: create_organization.md  create_organization_group.md  delete_organization.md  delete_organization_group.md  disinvite_user.md  invite_user.md  modify_organization_group_settings.md
docs/design/function/user/: create_user.md  delete_user.md  modify_settings.md
docs/develop/: overview.md
infra/: compose.dev.yaml
infra/app/: Dockerfile
infra/db/init/: 001-create-roles.sh
infra/db/init/sql/: initialize.sql
infra/db/seed/: dev.sql
src/app/: main.py
src/app/core/: config.py  exceptions.py  migration.py
src/app/endpoints/v1/: __init__.py  router.py
src/app/infra/: database.py
src/app/infra/account/: __init__.py  account_basic_settings_repository.py  account_identity_read_repository.py  (+5 more)
src/app/model/: README.md  __init__.py
src/app/service/: README.md
src/app/view/: README.md
src/test/: README.md  conftest.py  const.py  dummy_session.py
src/test/integration/: conftest.py
src/test/service/: conftest.py  dummy_account_auth_repository.py  dummy_textbook_auth_dependencies.py  test_account_auth_service.py  test_auth_service.py  test_author_check_service.py  test_target_auth_unit_builder.py  test_textbook_auth_service.py
(+267 files in other folders)
