[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.135.1",
    "pre-commit>=4.5.1",
    "psycopg>=3.3.3",
    "pyaml>=26.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.9",
    "sqlmodel>=0.0.37",
]

[tool.ruff]
target-version = "py312"
line-length = 120
include = [
    "src/app/**/*.py",
    "src/test/**/*.py",
]
force-exclude = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]
ignore = []
